double scrollbar bug fix

--- a/Frontend/src/app/app.component.scss
+++ b/Frontend/src/app/app.component.scss
@@ -45,7 +45,7 @@
 }
 
 .outlet-content {
-    min-height: 100%;
+    min-height: 100vh;
 }
 
 .sidebar {
